--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,7 +6,11 @@ jobs:
     runs-on: self-hosted
     steps:
       - run: ls -al
-      - run: echo "Deploying rewe-fe 🚀"
+      - run: echo "Building rewe-fe image"
+      - run: docker build -t rewe-fe-image ./rewe-fe
+      - run: docker stop rewe-fe || true && docker rm rewe-fe || true
+      - run: echo "Deploying rewe-fe image 🚀"
+      - run: docker run -d --net rewe-net --ip 172.41.0.21 --name rewe-fe rewe-fe-image
   Deploy-Rewe-Be:
     runs-on: self-hosted
     steps:
