--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - run: ls -al
-      - run: cd rewe-fe
+        working-directory: ./rewe-fe
       - run: ls -al
       - run: echo "Building rewe-fe image"
       - run: docker build -t rewe-fe-image .
