--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,10 +5,11 @@ jobs:
   Deploy-Rewe-Fe:
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v2
       - name: Build image
         working-directory: ./rewe-fe
         run: |
-          echo "Building rewe-fe image"
+          echo "Building rewe-fe image... 🏗"
           docker build -t rewe-fe-image .
       - name: Deploy image
         working-directory: ./rewe-fe
