--- a/rewe-fe/Dockerfile
+++ b/rewe-fe/Dockerfile
@@ -1,10 +1,26 @@
-FROM node:13-alpine as build
+# Use the official Node.js image as the base image
+FROM node:14
+
+# Set the working directory inside the container
 WORKDIR /app
-COPY package*.json /app/
-RUN npm install -g ionic
+
+# Copy package.json and package-lock.json to the container
+COPY package*.json ./
+
+# Install project dependencies
 RUN npm install
-COPY ./ /app/
-RUN npm run-script build
-FROM nginx:alpine
-RUN rm -rf /usr/share/nginx/html/*
-COPY --from=build /app/www/ /usr/share/nginx/html/
+
+# Copy the entire project to the container
+COPY . .
+
+# Expose the port that the Ionic app will run on (adjust as needed)
+EXPOSE 8100
+
+# Build the Ionic app (adjust the command if needed)
+RUN npm run build
+
+# Command to start the Ionic app (adjust as needed)
+CMD ["ionic", "serve", "--address", "0.0.0.0", "--port", "8100"]
+
+# Example: If you need to pass environment variables to the app
+# CMD ["ionic", "serve", "--address", "0.0.0.0", "--port", "8100", "--env", "production"]
