--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,18 +7,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build image
-        working-directory: ./rewe-fe
+        working-directory: ./rewe-app-fe
         run: |
-          echo "Building rewe-fe image... 🏗"
+          echo "Building rewe-app-fe image... 🏗"
           ls -al
-          docker build -t rewe-fe-image .
+          docker build -t rewe-app-fe-image .
       - name: Deploy image
-        working-directory: ./rewe-fe
+        working-directory: ./rewe-app-fe
         run: |
-          echo "Deploying rewe-fe image 🚀"
+          echo "Deploying rewe-app-fe image 🚀"
           ls -al
-          docker stop rewe-fe || true && docker rm rewe-fe || true
-          docker run -d --net rewe-net --ip 172.41.0.21 --name rewe-fe rewe-fe-image
+          docker stop rewe-app-fe || true && docker rm rewe-app-fe || true
+          docker run -d --net rewe-net --ip 172.41.0.21 --name rewe-app-fe rewe-app-fe-image
   Deploy-Rewe-Be:
     runs-on: self-hosted
     steps:
