change project name of rewe-app-fe

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Pipeline 🚀
 run-name: ${{ github.actor }} is deploying rewe-app 🚀
 on: [push]
 jobs:
-  Deploy-Rewe-Fe:
+  Deploy-Rewe-App-Fe:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
@@ -19,7 +19,7 @@ jobs:
           ls -al
           docker stop rewe-app-fe || true && docker rm rewe-app-fe || true
           docker run -d --net rewe-net --ip 172.41.0.21 --name rewe-app-fe rewe-app-fe-image
-  Deploy-Rewe-Be:
+  Deploy-Rewe-App-Be:
     runs-on: self-hosted
     steps:
       - run: ls -al
