--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,4 +23,4 @@ jobs:
     runs-on: self-hosted
     steps:
       - run: ls -al
-      - run: echo "Deploying rewe-be 🚀"
+      - run: echo "Deploying rewe-app-be 🚀"
