--- a/rewe-app-fe/public/manifest.json
+++ b/rewe-app-fe/public/manifest.json
@@ -22,5 +22,5 @@
 	"start_url": "index.html",
 	"display": "standalone",
 	"theme_color": "#02EFD1",
-	"background_color": "#02EFD1"
+	"background_color": "#333333"
 }
