Create github action for backend

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,5 +22,17 @@ jobs:
   Deploy-Rewe-App-Be:
     runs-on: self-hosted
     steps:
-      - run: ls -al
-      - run: echo "Deploying rewe-app-be 🚀"
+      - uses: actions/checkout@v2
+      - name: Build image
+        working-directory: ./rewe-app-be
+        run: |
+          echo "Building rewe-app-be image... 🏗"
+          ls -al
+          docker build -t rewe-app-be-image .
+      - name: Deploy image
+        working-directory: ./rewe-app-be
+        run: |
+          echo "Deploying rewe-app-be image 🚀"
+          ls -al
+          docker stop rewe-app-be || true && docker rm rewe-app-be || true
+          docker run -d --net rewe-net --ip 172.41.0.22 --name rewe-app-be rewe-app-be-image
