Change app name

--- a/rewe-app-fe/public/manifest.json
+++ b/rewe-app-fe/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Rewe App",
-	"name": "Rewe App Ionic",
+	"name": "Rewe App",
 	"icons": [
 		{
 			"src": "assets/icon/favicon.ico",
