--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -4,10 +4,14 @@
 	"private": true,
 	"dependencies": {
 		"@capacitor/app": "5.0.6",
+		"@capacitor/camera": "5.0.6",
 		"@capacitor/core": "5.2.0",
+		"@capacitor/filesystem": "^5.1.2",
 		"@capacitor/haptics": "5.0.6",
 		"@capacitor/keyboard": "5.0.6",
+		"@capacitor/preferences": "^5.0.6",
 		"@capacitor/status-bar": "5.0.6",
+		"@ionic/pwa-elements": "^3.2.2",
 		"@ionic/react": "^7.0.0",
 		"@ionic/react-router": "^7.0.0",
 		"@testing-library/jest-dom": "^5.11.9",
