--- a/rewe-app-fe/public/manifest.json
+++ b/rewe-app-fe/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Rewe App",
-	"name": "Rewe App Ionic",
+	"name": "Rewe App",
 	"icons": [
 		{
 			"src": "assets/icon/favicon.ico",
@@ -21,6 +21,6 @@
 	],
 	"start_url": "index.html",
 	"display": "standalone",
-	"theme_color": "#02EFD1",
-	"background_color": "#02EFD1"
+	"theme_color": "#333333",
+	"background_color": "#333333"
 }
