--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -12,6 +12,7 @@
 		"@ionic/pwa-elements": "^3.2.2",
 		"@ionic/react": "^7.0.0",
 		"@ionic/react-router": "^7.0.0",
+		"@supabase/supabase-js": "^2.32.0",
 		"@testing-library/jest-dom": "^5.11.9",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^12.6.3",
