--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,9 +13,9 @@ jobs:
         working-directory: ./rewe-app-fe
         run: |
           echo "Building rewe-app-fe image... 🏗"
-          echo "SUPABASE_URL=$SUPABASE_URL"
-          echo "SUPABASE_URL=$SUPABASE_URL" >> .env
-          echo "SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY" >> .env
+          echo "SUPABASE_URL=env.SUPABASE_URL"
+          echo "SUPABASE_URL=env.SUPABASE_URL" >> .env
+          echo "SUPABASE_ANON_KEY=env.SUPABASE_ANON_KEY" >> .env
           ls -al
           docker build -t rewe-app-fe-image .
       - name: Deploy image
