--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,6 +15,8 @@ jobs:
         run: |
           echo "Building rewe-app-fe image... 🏗"
           echo "SUPABASE_URL=$SUPABASE_URL" >> .env
+          echo "SUPABASE_URL_2=blabla" >> .env
+          echo "SUPABASE_URL_4=blublub" >> .env
           ls -al
           cat .env
           docker build -t rewe-app-fe-image .
