--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,14 +11,10 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL_DEV }} # TODO: Make this dynamic
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY_DEV }} # TODO: Make this dynamic
         working-directory: ./rewe-app-fe
-        # echo "SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY" >> .env
         run: |
           echo "Building rewe-app-fe image... 🏗"
           echo "SUPABASE_URL=$SUPABASE_URL" >> .env
-          echo "SUPABASE_URL_2=blabla" >> .env
-          echo "SUPABASE_URL_4=blublub" >> .env
-          ls -al
-          cat .env
+          echo "SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY" >> .env
           docker build -t rewe-app-fe-image .
       - name: Deploy image
         working-directory: ./rewe-app-fe
