--- a/rewe-app-fe/.gitignore
+++ b/rewe-app-fe/.gitignore
@@ -16,10 +16,10 @@
 
 # misc
 .DS_Store
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.production
 /.vscode/*
 !/.vscode/extensions.json
 .idea
