--- a/rewe-app-fe/.gitignore
+++ b/rewe-app-fe/.gitignore
@@ -17,9 +17,9 @@
 # misc
 .DS_Store
 .env
-.env.local
-.env.development
 .env.production
+.env.local
+.env.prod
 /.vscode/*
 !/.vscode/extensions.json
 .idea
