Change Splashscreen color

--- a/rewe-app-fe/public/manifest.json
+++ b/rewe-app-fe/public/manifest.json
@@ -21,6 +21,6 @@
 	],
 	"start_url": "index.html",
 	"display": "standalone",
-	"theme_color": "#333333",
-	"background_color": "#333333"
+	"theme_color": "#FFFFFF",
+	"background_color": "#FFFFFF"
 }
