--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,4 +39,4 @@ jobs:
           echo "Deploying rewe-app-be image 🚀"
           ls -al
           docker stop rewe-app-be || true && docker rm rewe-app-be || true
-          docker run -d --net rewe-net --ip 172.41.0.22 --name rewe-app-be rewe-app-be-image
+          docker run -d --net rewe-net --ip 172.41.0.22  -v rewe-be-data:/app/data/ --name rewe-app-be rewe-app-be-image
