--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build image
         env:
-          BASE_URL: ${{ secrets.API_BASE_URL }} # TODO: Make this dynamic
+          API_BASE_URL: ${{ secrets.API_BASE_URL }} # TODO: Make this dynamic
           SUPABASE_URL: ${{ secrets.SUPABASE_URL_DEV }} # TODO: Make this dynamic
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY_DEV }} # TODO: Make this dynamic
         working-directory: ./rewe-app-fe
