Use Ionic App Production Build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3'
 services:
-  backend:
+  rewe-app-be:
     build:
       context: ./rewe-app-be
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
     image: rewe-app-be-image
     ports:
       - "8080:80"
 
-  frontend:
+  rewe-app-fe:
     build:
       context: ./rewe-app-fe
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
     image: rewe-app-fe-image
     ports:
-      - "8081:8100"
+      - "8081:80"
