--- a/rewe-app-be/Dockerfile
+++ b/rewe-app-be/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:3.11
-WORKDIR ./
-# COPY ./requirements.txt requirements.txt
-# COPY ./purchases.parquet purchases.parquet
-COPY ./ .
+WORKDIR /app
+COPY . .
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "80"]
