--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,10 +1,10 @@
 name: GitHub Actions Pipeline 🚀
 run-name: ${{ github.actor }} is deploying rewe-app 🚀
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
+#  push:
+#    branches:
+#      - main
+
 jobs:
   Deploy-Rewe-App-Fe:
     runs-on: self-hosted
