--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,7 @@
 name: GitHub Actions Pipeline 🚀
 run-name: ${{ github.actor }} is deploying rewe-app 🚀
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 #  push:
 #    branches:
 #      - main
