--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -42,7 +42,8 @@
 		"workbox-range-requests": "^5.1.4",
 		"workbox-routing": "^5.1.4",
 		"workbox-strategies": "^5.1.4",
-		"workbox-streams": "^5.1.4"
+		"workbox-streams": "^5.1.4",
+		"zustand": "^4.4.1"
 	},
 	"devDependencies": {
 		"@capacitor/cli": "5.2.0",
