--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,9 @@
 name: GitHub Actions Pipeline 🚀
 run-name: ${{ github.actor }} is deploying rewe-app 🚀
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   Deploy-Rewe-App-Fe:
