--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,10 @@
 name: GitHub Actions Pipeline 🚀
 run-name: ${{ github.actor }} is deploying rewe-app 🚀
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   Deploy-Rewe-App-Fe:
     runs-on: self-hosted
@@ -8,11 +12,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build image
         env:
+          API_BASE_URL: ${{ secrets.API_BASE_URL }} # TODO: Make this dynamic
           SUPABASE_URL: ${{ secrets.SUPABASE_URL_DEV }} # TODO: Make this dynamic
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY_DEV }} # TODO: Make this dynamic
         working-directory: ./rewe-app-fe
         run: |
           echo "Building rewe-app-fe image... 🏗"
+          echo "REACT_APP_API_BASE_URL=$API_BASE_URL" >> .env
           echo "REACT_APP_SUPABASE_URL=$SUPABASE_URL" >> .env
           echo "REACT_APP_SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY" >> .env
           docker build -t rewe-app-fe-image .
@@ -39,4 +45,4 @@ jobs:
           echo "Deploying rewe-app-be image 🚀"
           ls -al
           docker stop rewe-app-be || true && docker rm rewe-app-be || true
-          docker run -d --net rewe-net --ip 172.41.0.22  -v rewe-be-data:/app/data/ --name rewe-app-be rewe-app-be-image
+          docker run -d --net rewe-net --ip 172.41.0.20  -v rewe-be-data:/app/data/ --name rewe-app-be rewe-app-be-image
