--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -59,8 +59,8 @@
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
 	},
 	"scripts": {
-		"start": "TAILWIND_MODE=watch craco start",
-		"build": "craco build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
 		"ionic:serve": "TAILWIND_MODE=watch craco start",
 		"ionic:build": "craco build",
 		"test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
