--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -25,6 +25,8 @@
 		"@types/react-router-dom": "^5.1.7",
 		"history": "^4.9.0",
 		"ionicons": "^7.0.0",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-preset-env": "^9.1.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router": "^5.2.0",
