--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -7,9 +7,9 @@
 		"@capacitor/camera": "^5.0.7",
 		"@capacitor/core": "5.2.0",
 		"@capacitor/haptics": "5.0.6",
+		"@capacitor/ios": "5.2.0",
 		"@capacitor/keyboard": "5.0.6",
 		"@capacitor/status-bar": "5.0.6",
-		"@craco/craco": "^7.1.0",
 		"@ionic/pwa-elements": "^3.2.2",
 		"@ionic/react": "^7.0.0",
 		"@ionic/react-router": "^7.0.0",
@@ -51,19 +51,17 @@
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
-		"autoprefixer": "^9.8.8",
 		"eslint": "^8.35.0",
 		"eslint-plugin-react": "^7.32.2",
-		"postcss": "^7.0.39",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-preset-env": "^9.1.3",
 		"prettier": "^3.0.2",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+		"tailwindcss": "^3.3.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"ionic:serve": "TAILWIND_MODE=watch craco start",
-		"ionic:build": "craco build",
-		"test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
+		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint --ext .ts,.tsx src",
 		"prettier": "prettier --list-different --write ."
