--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,6 +10,13 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
+      - name: Lint & Test
+        working-directory: ./rewe-app-fe
+        run: |
+          echo "Testing rewe-app-fe ... 🧪"
+          npm run test
+          echo "Linting rewe-app-fe ... 🧹"
+          npm run lint
       - name: Build image
         env:
           API_BASE_URL: ${{ secrets.API_BASE_URL }} # TODO: Make this dynamic
