Disable Watch mode in test script

--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -61,7 +61,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "react-scripts test --coverage --watchAll=false",
 		"eject": "react-scripts eject",
 		"lint": "eslint --ext .ts,.tsx src",
 		"prettier": "prettier --list-different --write ."
