--- a/rewe-app-fe/Dockerfile
+++ b/rewe-app-fe/Dockerfile
@@ -8,6 +8,7 @@ COPY . .
 RUN ionic build --prod
 
 # Use Nginx as the production web server
-FROM nginx:latest
+FROM nginx:alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build-stage /app/build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
