--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -13,7 +13,6 @@
 		"@ionic/pwa-elements": "^3.2.2",
 		"@ionic/react": "^7.0.0",
 		"@ionic/react-router": "^7.0.0",
-		"@supabase/supabase-js": "^2.32.0",
 		"@testing-library/jest-dom": "^5.11.9",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^12.6.3",
@@ -30,6 +29,7 @@
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^5.0.0",
+		"recharts": "^2.8.0",
 		"typescript": "^4.1.3",
 		"web-vitals": "^0.2.4",
 		"workbox-background-sync": "^5.1.4",
