--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@capacitor/app": "5.0.6",
 		"@capacitor/camera": "^5.0.7",
 		"@capacitor/core": "5.2.0",
