--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Lint & Test
         working-directory: ./rewe-app-fe
         run: |
+          npm install npm@latest -g
           echo "Installing rewe-app-fe dependencies ... 📦"
           npm install
           echo "Testing rewe-app-fe ... 🧪"
