--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          node-version: 14.x
+          node-version: latest
       - name: Lint & Test
         working-directory: ./rewe-app-fe
         run: |
