--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,11 +10,20 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
+        with:
+          node-version: latest
+      # - name: Lint & Test
+      #   working-directory: ./rewe-app-fe
+      #   run: |
+      #     echo "Installing rewe-app-fe dependencies ... 📦"
+      #     npm install
+      #     echo "Testing rewe-app-fe ... 🧪"
+      #     npm run test
+      #     echo "Linting rewe-app-fe ... 🧹"
+      #     npm run lint
       - name: Build image
         env:
-          API_BASE_URL: ${{ secrets.API_BASE_URL }} # TODO: Make this dynamic
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL_DEV }} # TODO: Make this dynamic
-          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY_DEV }} # TODO: Make this dynamic
+          API_BASE_URL: ${{ secrets.API_BASE_URL }} # TODO: make this dynamic
         working-directory: ./rewe-app-fe
         run: |
           echo "Building rewe-app-fe image... 🏗"
