--- a/rewe-app-fe/Dockerfile
+++ b/rewe-app-fe/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node.js runtime as the base image for building the app
-FROM node:14 AS build-stage
+FROM node:20 AS build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
@@ -8,6 +8,6 @@ COPY . .
 RUN ionic build --prod
 
 # Use Nginx as the production web server
-FROM nginx:latest
+FROM nginx:alpine
 COPY --from=build-stage /app/build /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
