--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@capacitor/app": "5.0.6",
 		"@capacitor/camera": "^5.0.7",
 		"@capacitor/core": "5.2.0",
@@ -13,7 +14,6 @@
 		"@ionic/pwa-elements": "^3.2.2",
 		"@ionic/react": "^7.0.0",
 		"@ionic/react-router": "^7.0.0",
-		"@supabase/supabase-js": "^2.32.0",
 		"@testing-library/jest-dom": "^5.11.9",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^12.6.3",
@@ -23,6 +23,7 @@
 		"@types/react-dom": "^18.0.6",
 		"@types/react-router": "^5.1.11",
 		"@types/react-router-dom": "^5.1.7",
+		"globalthis": "^1.0.3",
 		"history": "^4.9.0",
 		"ionicons": "^7.0.0",
 		"react": "^18.2.0",
@@ -30,6 +31,7 @@
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^5.0.0",
+		"recharts": "^2.8.0",
 		"typescript": "^4.1.3",
 		"web-vitals": "^0.2.4",
 		"workbox-background-sync": "^5.1.4",
@@ -61,7 +63,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "react-scripts test --coverage --watchAll=false",
 		"eject": "react-scripts eject",
 		"lint": "eslint --ext .ts,.tsx src",
 		"prettier": "prettier --list-different --write ."
