--- a/rewe-app-fe/nginx.conf
+++ b/rewe-app-fe/nginx.conf
@@ -1,7 +1,7 @@
 http {
     server {
         location / {
-            try_files               $uri /index.html;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
