--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,10 +1,6 @@
 name: GitHub Actions Pipeline 🚀
 run-name: ${{ github.actor }} is deploying rewe-app 🚀
-on:
-  push:
-    branches:
-      - main
-      - dev
+on: [push]
 jobs:
   Deploy-Rewe-App-Fe:
     runs-on: self-hosted
