--- a/rewe-app-fe/nginx.conf
+++ b/rewe-app-fe/nginx.conf
@@ -1,7 +1,10 @@
-http {
-    server {
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+server_tokens off;
+server {
+    listen       80;
+    server_name  localhost;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri /index.html;
     }
 }
