--- a/rewe-app-fe/Dockerfile
+++ b/rewe-app-fe/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18.12.1-buster-slim AS builder
+FROM node:20-buster-slim as builder
 
 WORKDIR /app
 COPY package.json package-lock.json ./
@@ -7,7 +7,7 @@ COPY src/ src/
 RUN npm ci
 RUN npm run build
 
-FROM nginx:1.23.2-alpine
+FROM nginx:1.21.1-alpine
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
 RUN touch /var/run/nginx.pid
