--- a/rewe-app-fe/package.json
+++ b/rewe-app-fe/package.json
@@ -14,16 +14,11 @@
 		"@ionic/pwa-elements": "^3.2.2",
 		"@ionic/react": "^7.0.0",
 		"@ionic/react-router": "^7.0.0",
-		"@testing-library/jest-dom": "^5.11.9",
-		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^12.6.3",
-		"@types/jest": "^26.0.20",
 		"@types/node": "^12.19.15",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@types/react-router": "^5.1.11",
 		"@types/react-router-dom": "^5.1.7",
-		"globalthis": "^1.0.3",
 		"history": "^4.9.0",
 		"ionicons": "^7.0.0",
 		"react": "^18.2.0",
@@ -51,19 +46,22 @@
 	"devDependencies": {
 		"@capacitor/cli": "5.2.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
+		"@types/jest": "^29.5.6",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
+		"babel-jest": "^29.7.0",
 		"eslint": "^8.35.0",
 		"eslint-plugin-react": "^7.32.2",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-preset-env": "^9.1.3",
 		"prettier": "^3.0.2",
-		"tailwindcss": "^3.3.3"
+		"tailwindcss": "^3.3.3",
+		"ts-jest": "^29.1.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test --coverage --watchAll=false",
+		"test": "jest --coverage --watchAll=false",
 		"eject": "react-scripts eject",
 		"lint": "eslint --ext .ts,.tsx src",
 		"prettier": "prettier --list-different --write ."
